# DataStructures

./: .gitignore  CMakeLists.txt  README.md
BasicVector/: basicVector.hpp  main  main.cpp
Basics/: pointers  structs  structs.cpp
src/BasicVector/: basicVector.hpp  main  main.cpp
src/Basics/: pointers.cpp
src/LinkedList/: DLL.hpp
tests/: vectorTest.cpp
